# ipc-library

./: .gitignore  CMakeLists.txt  README.md  build.sh  library.cpp  library.h
